TODO
Policies declaration via app config (https://www.rabbitmq.com/parameters.html)
Run separate service/consumer as worker
Add ABC to prevent circular import hell

v 1.1.0a1
Pydantic based app settings
Inject arguments to endpoints based on type annotations (FastAPI-like)
Inject logger or other components

v 1.0.11
Make it possible to just register endpoints, without running loop (method `Mela.setup()`)

v 1.0.10
Implemented headers for RPC clients. Check it here: `examples/rpc/client.py`

v 1.0.9
Fixed issue #6:
    It seems that unhandled exceptions which cause the app to quit automatically nack incoming messages
    without requeueing them, leading to data loss. This is true of exceptions thrown within both mela
    code (e.g. json deserialisation exceptions) as well as within application code. Confirmed in 1.0.5 and 1.0.7
Some logging improvements
Fixed the bug with duplicated anonymous queues for one RPC client.
Added dead letter exchange example and fixed dead letter exchange default routing key to empty string
Added an option to directly configure requeue strategy on broken messages for consumers

v 1.0.8
RPC services and clients.
Removed non-direct publishing.

v 1.0.7
Added simple exception handling.

v 1.0.4
Added an option to use async generators as service processors
Added support of different exchange types

v 1.0.3
Implemented dynamic routing key and other message params
Added example of splitter service
Project was renamed into `Mela`
First release on GitHub and PyPI

v 1.0.2
Bumped version of aio-pika from 6.7.1 up to 6.8.0
Replaced PyYAML with envyaml

v 1.0.1
Added an ability to cancel message consuming.

v 1.0.0
First async release

v 0.1.8
Added optional timeout parameter to Mela.run()

v 0.1.7
Added possibility to realize `splitter` pattern (https://www.enterpriseintegrationpatterns.com/patterns/messaging/Sequencer.html)
See `example_splitter.py` for more details

v 0.1.6a0
Changed connection processing

v 0.1.5
Fixed spamming connections bug
