@@ -2,6 +2,8 @@ from .consumer import Consumer
 from .exceptions import NackMessageError
 from .publisher import Publisher
 from .service import Service
+from .rpc import RPC
+from .rpc import RPCClient
 
 
-__all__ = ['Consumer', 'Publisher', 'Service', 'NackMessageError']
+__all__ = ['Consumer', 'Publisher', 'Service', 'RPC', 'RPCClient', 'NackMessageError']
