@@ -3,6 +3,10 @@ Policies declaration via app config (https://www.rabbitmq.com/parameters.html)
 Run separate service/consumer as worker
 Add ABC to prevent circular import hell
 
+UPCOMING
+Add missing requirement, anyio
+
+
 v 1.1.0a1
 Pydantic based app settings
 Inject arguments to endpoints based on type annotations (FastAPI-like)
